# poddler

./: README.md  api.py  downloader.py  fake_rss_feed.xml  handler.py  models.py  parser.py  pyproject.toml  queries.py  test_parser.py  test_queries.py  tui.py
poddler/: handler.py  parser.py  queries.py  requirements.txt  tui.py
tests/: test_parser.py  test_queries.py
