[tool.poetry]
name = "poddler"
version = "0.1.0"
description = "A TUI podcast downloader using rss feeds."
authors = ["alx-b"]
license = "The Unlicense"

[tool.poetry.dependencies]
python = "^3.9"
npyscreen = "^4.10.5"
httpx = "^0.18.1"
feedparser = "^6.0.2"

[tool.poetry.dev-dependencies]
black = "^21.5b0"
pyflakes = "^2.3.1"
pytest = "^6.2.4"
coverage = "^5.5"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
